--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,8 +167,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -284,8 +284,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -401,8 +401,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -518,8 +518,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -635,8 +635,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -752,8 +752,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -928,8 +928,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 25
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -1085,8 +1085,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 25
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -1242,8 +1242,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 26
-    resource_class: xlarge
+    parallelism: 1
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -1383,8 +1383,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -1537,8 +1537,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -1679,8 +1679,8 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-11-openjdk-amd64
     - CASSANDRA_USE_JDK11: true
-    parallelism: 36
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -1931,8 +1931,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2047,8 +2047,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2163,8 +2163,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2279,8 +2279,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2395,8 +2395,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2511,8 +2511,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2755,8 +2755,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 25
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2870,8 +2870,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 25
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -2985,8 +2985,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 26
-    resource_class: xlarge
+    parallelism: 1
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -3125,8 +3125,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 12
-    resource_class: xlarge
+    parallelism: 1
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -3265,8 +3265,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -3377,8 +3377,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -3518,8 +3518,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 36
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -3658,8 +3658,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 100
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -3776,8 +3776,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -3918,8 +3918,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -4029,8 +4029,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -4171,7 +4171,7 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     parallelism: 1
-    resource_class: xlarge
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -4229,7 +4229,7 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     parallelism: 1
-    resource_class: xlarge
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -4287,7 +4287,7 @@ jobs:
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     parallelism: 1
-    resource_class: xlarge
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
@@ -4344,8 +4344,8 @@ jobs:
     - REPEATED_JVM_UPGRADE_DTEST_STOP_ON_FAILURE: false
     - JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
     - JDK_HOME: /usr/lib/jvm/java-8-openjdk-amd64
-    parallelism: 20
-    resource_class: xlarge
+    parallelism: 4
+    resource_class: medium
     shell: /bin/bash -eo pipefail -l
     steps:
     - attach_workspace:
